// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoResultPreview before and after 1`] = `
<div
  className="turn"
>
  <div
    className="turn__info"
  >
    <div
      className="turn__info-row"
    >
      <h3
        className="turn__speaker"
      >
         Smith
      </h3>
      <div
        className="dropdown dropdown--share"
      >
        <span
          className="dropdown__toggle dropdown__toggle--share"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"
            />
            <polyline
              points="16 6 12 2 8 6"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="15"
            />
          </svg>
        </span>
        <div
          className="dropdown__dropdown dropdown__dropdown--hidden"
        >
          <SharePreview />
        </div>
      </div>
    </div>
    <div
      className="turn__info-row turn__info-row--short"
    >
      <span
        className="turn__time"
      >
        0:02 - 0:17
      </span>
    </div>
    <div
      className="turn__info-row"
    >
      <button
        className="turn__button turn__button--play"
        onClick={[Function]}
      >
        <svg
          fill="none"
          height={20}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="5 3 19 12 5 21 5 3"
          />
        </svg>
      </button>
      <button
        className="turn__button turn__button--bookmark"
        onClick={[Function]}
      >
        <svg
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"
          />
        </svg>
      </button>
    </div>
  </div>
  <p
    className="turn__results"
  >
    Good evening. The 
    <strong>
      television
    </strong>
     and radio stations of the United States and their affiliated stations are proud to provide facilities for a discussion of issues in the current political campaign by the two major candidates for the presidency. The candidates need no introduction.
  </p>
</div>
`;

exports[`VideoResultPreview containing 1`] = `
<div
  className="turn"
>
  <div
    className="turn__info"
  >
    <div
      className="turn__info-row"
    >
      <h3
        className="turn__speaker"
      >
         Smith
      </h3>
      <div
        className="dropdown dropdown--share"
      >
        <span
          className="dropdown__toggle dropdown__toggle--share"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"
            />
            <polyline
              points="16 6 12 2 8 6"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="15"
            />
          </svg>
        </span>
        <div
          className="dropdown__dropdown dropdown__dropdown--hidden"
        >
          <SharePreview />
        </div>
      </div>
    </div>
    <div
      className="turn__info-row turn__info-row--short"
    >
      <span
        className="turn__time"
      >
        0:03 - 0:15
      </span>
    </div>
    <div
      className="turn__info-row"
    >
      <button
        className="turn__button turn__button--play"
        onClick={[Function]}
      >
        <svg
          fill="none"
          height={20}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="5 3 19 12 5 21 5 3"
          />
        </svg>
      </button>
      <button
        className="turn__button turn__button--bookmark"
        onClick={[Function]}
      >
        <svg
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"
          />
        </svg>
      </button>
    </div>
  </div>
  <p
    className="turn__results"
  >
    The 
    <strong>
      television
    </strong>
     and radio stations of the United States and their affiliated stations are proud to provide facilities for a discussion of issues in the current political campaign by the two major candidates for the presidency.
  </p>
</div>
`;
